--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ install:
   - git submodule update --init tools/build
   - git submodule update --init libs/config
   - git submodule update --init tools/boostdep
+  - git submodule update --init tools/boost_install
+  - git submodule update --init libs/headers
   - cp -r $TRAVIS_BUILD_DIR/* libs/lambda
   - python tools/boostdep/depinst/depinst.py lambda
   - ./bootstrap.sh
