--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ matrix:
     - os: linux
       dist: bionic
       compiler: g++-11
-      env: TOOLSET=gcc CXXSTD=03,11,14,17,2a
+      env: UBSAN=1 TOOLSET=gcc CXXSTD=03,11,14,17,20 UBSAN_OPTIONS=print_stacktrace=1 LINKFLAGS=-fuse-ld=gold
       addons:
         apt:
           packages:
@@ -119,7 +119,7 @@ matrix:
 
     - os: linux
       compiler: clang++-12
-      env: TOOLSET=clang CXXSTD=03,11,14,17,20
+      env: UBSAN=1 TOOLSET=clang CXXSTD=03,11,14,17,20 UBSAN_OPTIONS=print_stacktrace=1
       addons:
         apt:
           packages:
@@ -132,7 +132,7 @@ matrix:
     - os: linux
       dist: bionic
       compiler: clang++-libc++
-      env: TOOLSET=clang CXXSTD=03,11,14,17,2a
+      env: UBSAN=1 TOOLSET=clang CXXSTD=03,11,14,17,2a UBSAN_OPTIONS=print_stacktrace=1
       addons:
         apt:
           packages:
@@ -140,15 +140,13 @@ matrix:
 
     - os: osx
       compiler: clang++
-      env: TOOLSET=clang CXXSTD=03,11,14,1z
+      env: UBSAN=1 TOOLSET=clang CXXSTD=03,11,14,1z UBSAN_OPTIONS=print_stacktrace=1
 
 install:
   - BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
   - cd ..
   - git clone -b $BOOST_BRANCH https://github.com/boostorg/boost.git boost-root
   - cd boost-root
-  - git submodule update --init tools/build
-  - git submodule update --init libs/config
   - git submodule update --init tools/boostdep
   - cp -r $TRAVIS_BUILD_DIR/* libs/lambda
   - python tools/boostdep/depinst/depinst.py lambda
@@ -158,7 +156,7 @@ install:
 script:
   - |-
     echo "using $TOOLSET : : $TRAVIS_COMPILER ;" > ~/user-config.jam
-  - ./b2 -j3 libs/lambda/test toolset=$TOOLSET cxxstd=$CXXSTD
+  - ./b2 -j3 libs/lambda/test toolset=$TOOLSET cxxstd=$CXXSTD variant=debug,release ${UBSAN:+cxxflags=-fsanitize=undefined cxxflags=-fno-sanitize-recover=undefined linkflags=-fsanitize=undefined define=UBSAN=1 debug-symbols=on} ${LINKFLAGS:+linkflags=$LINKFLAGS}
 
 notifications:
   email:
