--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,10 @@ jobs:
             stdlib: "libc++"
             cxxstd: "03,11,14,17,2a"
             os: ubuntu-20.04
+            install:
+              - clang-12
+              - libc++-12-dev
+              - libc++abi-12-dev
           - toolset: clang
             cxxstd: "03,11,14,17,2a"
             os: macos-10.15
@@ -110,7 +114,7 @@ jobs:
 
       - name: Install packages
         if: matrix.install
-        run: sudo apt install ${{matrix.install}}
+        run: sudo apt-get install -y ${{join(matrix.install, ' ')}}
 
       - name: Setup Boost
         run: |
